# OpenGLDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sl/java/opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: rect.frag  rect.vert  tex_rect.frag  tex_rect.vert  triangle.frag  triangle.vert
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/image/: CoreImage.cpp  CoreImage.h  ImageUtil.cpp  ImageUtil.h
app/src/main/cpp/renders/: NativeRenderContext.cpp  NativeRenderContext.h  NativeRender_JNI.cpp
app/src/main/cpp/samples/: BaseSample.cpp  BaseSample.h  RectTexSample.cpp  RectTexSample.h  TriangleSample.cpp  TriangleSample.h
app/src/main/cpp/utils/: AndroidLog.h  GLCamera.cpp  GLCamera.h  GLProgram.cpp  GLProgram.h  GLUtils.cpp  GLUtils.h  NDKUtil.cpp  NDKUtil.h  android_fopen.cpp  android_fopen.h
app/src/main/java/com/sl/java/opengl/: MainActivity.java
app/src/main/java/com/sl/java/opengl/model/: Vec3.java
app/src/main/java/com/sl/java/opengl/rendering/: RectRenderer.java  TexRectRenderer.java  TriangleRenderer.java
app/src/main/java/com/sl/java/opengl/rendering/cnative/: JNIBase.java  NativeRender.java
app/src/main/java/com/sl/java/opengl/utils/: ShaderUtil.java  TextureUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sl/java/opengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
